[gd_scene load_steps=22 format=3 uid="uid://dup2jh8uleo3l"]

[ext_resource type="Script" uid="uid://dc7w7oe3lm0eu" path="res://scripts/player.gd" id="1_u2qrv"]
[ext_resource type="Script" uid="uid://d350u8evihs1u" path="res://addons/netfox/rollback/rollback-synchronizer.gd" id="2_ktqdq"]
[ext_resource type="PackedScene" uid="uid://0by3fcnl3a5n" path="res://assets/characters/master/master_scene.tscn" id="2_v7wsi"]
[ext_resource type="Script" uid="uid://byrgwv2o7hstx" path="res://addons/netfox.extras/state-machine/rewindable-state-machine.gd" id="3_lo6j0"]
[ext_resource type="Script" uid="uid://dour8fehaaugp" path="res://addons/netfox/tick-interpolator.gd" id="4_a47yd"]
[ext_resource type="PackedScene" uid="uid://l1d8hwvn7hbq" path="res://scenes/player/camera_input.tscn" id="4_g37aj"]
[ext_resource type="Script" uid="uid://bbhybl3bvg0b6" path="res://scripts/states/movement/idle_state.gd" id="5_4l86x"]
[ext_resource type="Script" uid="uid://btj80uq43ccmt" path="res://scripts/states/movement/jump_state.gd" id="6_a47yd"]
[ext_resource type="Script" uid="uid://8ympfbj5i4hc" path="res://scripts/states/movement/fall_state.gd" id="8_4l86x"]
[ext_resource type="Script" uid="uid://dlfbk4aggn6u1" path="res://scripts/states/movement/move_state.gd" id="8_a47yd"]
[ext_resource type="Script" uid="uid://c8pgkna7f6aye" path="res://scripts/states/movement/ragdoll.gd" id="10_gjnd3"]
[ext_resource type="Script" uid="uid://5oxt7p6a1uo8" path="res://scripts/player_input.gd" id="10_kusnb"]
[ext_resource type="PackedScene" uid="uid://qsh5m8pulul5" path="res://scripts/systems/HealthSystem.tscn" id="11_2hvjq"]
[ext_resource type="PackedScene" uid="uid://btdemgg0e0b4o" path="res://scenes/player/player_ui.tscn" id="12_ua4at"]
[ext_resource type="Script" uid="uid://d0r47oscrxt5o" path="res://scripts/states/movement/dead.gd" id="13_2hvjq"]
[ext_resource type="Script" uid="uid://r1boayxutr47" path="res://scripts/states/movement/static.gd" id="13_h5dd4"]
[ext_resource type="PackedScene" uid="uid://cf6jco7ctb45m" path="res://weapon_manager/weapons_manager.tscn" id="13_nrabn"]
[ext_resource type="PackedScene" uid="uid://dwphcc8ns8ypb" path="res://scripts/systems/HeatSystem.tscn" id="15_h5dd4"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nrabn"]
properties/0/path = NodePath("master/AnimationPlayer:active")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("master/AnimationPlayer:current_animation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("master/AnimationPlayer:speed_scale")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath("master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D:active")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:pvp")
properties/4/spawn = true
properties/4/replication_mode = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y8poy"]
radius = 0.3
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2hvjq"]
radius = 0.15
height = 0.4

[node name="PlayerRootMotion" type="CharacterBody3D" node_paths=PackedStringArray("_player_input", "_camera_input", "_player_model", "_state_machine", "_tick_interpolator", "sync", "skeleton", "bones", "chest", "look_at_target", "health_system", "heat_system", "weapons_manager", "weapon_pivot", "player_ui")]
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_u2qrv")
_player_input = NodePath("PlayerInput")
_camera_input = NodePath("CameraInput")
_player_model = NodePath("master")
_state_machine = NodePath("RewindableStateMachine")
_tick_interpolator = NodePath("TickInterpolator")
sync = NodePath("MultiplayerSynchronizer")
skeleton = NodePath("master/Armature/GeneralSkeleton")
bones = NodePath("master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D")
chest = NodePath("master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D/Physical Bone Chest")
look_at_target = NodePath("CameraInput/CameraMount/CameraRot/Holder")
health_system = NodePath("HealthSystem")
heat_system = NodePath("HeatSystem")
weapons_manager = NodePath("RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager")
weapon_pivot = NodePath("RightHandBoneAttachment/WeaponPivot")
player_ui = NodePath("PlayerUi")

[node name="master" parent="." instance=ExtResource("2_v7wsi")]

[node name="GeneralSkeleton" parent="master/Armature" index="0"]
bones/1/position = Vector3(0, 1.01474, -2.23517e-08)
bones/1/rotation = Quaternion(-0.111724, -0.340656, -0.0256631, 0.933173)
bones/2/rotation = Quaternion(0.0696819, 0.000131419, -0.00315373, 0.997564)
bones/3/rotation = Quaternion(0.142749, -0.000154882, -0.00659957, 0.989737)
bones/4/rotation = Quaternion(0.142753, -0.000767852, -0.00646854, 0.989737)
bones/5/rotation = Quaternion(0.00367602, 0.0652119, 0.00750238, 0.997836)
bones/6/rotation = Quaternion(-0.0401355, 0.192197, 0.0901436, 0.976383)
bones/8/rotation = Quaternion(0.603042, 0.664832, 0.316275, -0.307098)
bones/9/rotation = Quaternion(0.230938, 0.812192, -0.459651, 0.275196)
bones/10/rotation = Quaternion(0.379905, -0.596382, 0.379905, 0.596383)
bones/11/rotation = Quaternion(-0.268708, -0.2406, -0.0800929, 0.929243)
bones/12/rotation = Quaternion(-0.169099, 0.723882, 0.146547, 0.652628)
bones/13/rotation = Quaternion(-0.0239176, 0.173716, 0.0451123, 0.983471)
bones/14/rotation = Quaternion(-0.0832054, -0.0236832, -0.0366951, 0.995575)
bones/16/rotation = Quaternion(0.315086, -0.0125761, -0.0319876, 0.948441)
bones/17/rotation = Quaternion(0.499451, 8.62032e-06, -0.0511836, 0.864829)
bones/18/rotation = Quaternion(0.209056, 1.38581e-06, -0.0214241, 0.977669)
bones/20/rotation = Quaternion(0.441256, -0.0180506, -0.0446587, 0.896087)
bones/21/rotation = Quaternion(0.535757, 5.58794e-06, -0.0549041, 0.842585)
bones/22/rotation = Quaternion(0.154932, 1.60933e-06, -0.0158774, 0.987798)
bones/24/rotation = Quaternion(0.507392, -0.0259757, -0.0427763, 0.860261)
bones/25/rotation = Quaternion(0.586002, -1.16006e-05, -0.0600532, 0.808081)
bones/26/rotation = Quaternion(0.22264, 1.40071e-06, -0.0228159, 0.974634)
bones/28/rotation = Quaternion(0.591182, -0.0695519, 0.00186139, 0.803531)
bones/29/rotation = Quaternion(0.528815, 7.94977e-06, -0.0541928, 0.847005)
bones/30/rotation = Quaternion(0.122178, 1.3411e-06, -0.0125208, 0.992429)
bones/32/rotation = Quaternion(0.660634, -0.614887, -0.217027, -0.371988)
bones/33/rotation = Quaternion(-0.551948, 0.65935, -0.495314, 0.123591)
bones/34/rotation = Quaternion(0.535449, 0.461838, -0.53545, 0.461838)
bones/35/rotation = Quaternion(-0.283002, -0.343607, 0.057477, 0.893611)
bones/36/rotation = Quaternion(-0.102137, -0.705425, -0.256448, 0.652824)
bones/37/rotation = Quaternion(0.123782, -0.275824, 0.0300284, 0.952732)
bones/38/rotation = Quaternion(0.406183, -0.237284, 0.139427, 0.871362)
bones/40/rotation = Quaternion(0.10813, 0.00638808, -0.0157571, 0.993991)
bones/41/rotation = Quaternion(0.28301, -4.30644e-06, 0.0223091, 0.958858)
bones/42/rotation = Quaternion(0.256754, -1.65403e-06, 0.0202396, 0.966265)
bones/44/rotation = Quaternion(0.433077, 0.000530213, 0.0682011, 0.898773)
bones/45/rotation = Quaternion(0.819464, -6.85454e-06, 0.0645973, 0.569479)
bones/46/rotation = Quaternion(0.163234, -1.75834e-06, 0.0128675, 0.986503)
bones/48/rotation = Quaternion(0.47751, 0.0364934, 0.00473994, 0.877855)
bones/49/rotation = Quaternion(0.761809, 1.37985e-05, 0.0600522, 0.645013)
bones/50/rotation = Quaternion(0.425055, -2.04146e-06, 0.0335068, 0.904547)
bones/52/rotation = Quaternion(0.534623, 0.0448553, 0.00433183, 0.843888)
bones/53/rotation = Quaternion(0.658187, -2.12342e-07, 0.0518841, 0.751065)
bones/54/rotation = Quaternion(0.497471, -3.65079e-07, 0.0392149, 0.866594)
bones/56/rotation = Quaternion(0.0470909, -0.036033, 0.997017, 0.0493994)
bones/57/rotation = Quaternion(-0.00819656, 0.964775, -0.262893, -0.00532858)
bones/58/rotation = Quaternion(-0.0559717, 0.55953, -0.814029, -0.145434)
bones/59/rotation = Quaternion(5.13665e-08, 1, 0.000178814, -3.0293e-08)
bones/61/rotation = Quaternion(0.394896, 0.0735167, 0.903504, -0.149442)
bones/62/rotation = Quaternion(0.00461646, 0.981354, -0.192043, 0.00650275)
bones/63/rotation = Quaternion(-0.00810012, 0.722716, -0.690671, 0.0243002)
bones/64/rotation = Quaternion(5.66348e-08, 1, 3.27826e-07, 1.31709e-09)

[node name="Physical Bone Hips" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="0"]
transform = Transform3D(0.857218, -0.493044, -0.148607, -0.0587933, 0.19299, -0.979438, 0.511586, 0.848329, 0.136446, 0.00712633, 0.954723, -0.00654514)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.35633e-06, 4.08851e-07, 0.0479608)
body_offset = Transform3D(0.999625, 0.027085, 0.00397372, -6.1607e-07, 0.145181, -0.989405, -0.027375, 0.989034, 0.145127, -0.000191949, 0.0474526, -0.00696075)

[node name="Physical Bone Spine" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="1"]
transform = Transform3D(0.842468, -0.531052, 0.09073, 0.00414688, -0.162012, -0.98678, 0.53873, 0.831707, -0.134288, 0.00918017, 1.05689, -0.00557855)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.21875e-07, 2.17743e-06, 0.0559362)
body_offset = Transform3D(0.999629, 0.0269309, 0.00395172, -2.98023e-08, 0.14518, -0.989405, -0.0272194, 0.989039, 0.145126, -0.000221524, 0.0553432, -0.00811994)

[node name="Physical Bone Chest" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="2"]
transform = Transform3D(0.921267, -0.323609, 0.215744, 0.102149, -0.333912, -0.937053, 0.375278, 0.885314, -0.274565, -0.00968464, 1.17203, 0.0194936)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.42409e-06, 7.45989e-07, 0.0639261)
body_offset = Transform3D(0.99962, 0.0272772, 0.00406097, 5.63413e-05, 0.145232, -0.989398, -0.0275778, 0.989022, 0.145175, -0.000253201, 0.0632482, -0.0092814)

[node name="Physical Bone UpperChest" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="3"]
transform = Transform3D(0.951904, -0.0699453, 0.298307, 0.237008, -0.448932, -0.861561, 0.194182, 0.890824, -0.410762, -0.0449423, 1.29395, 0.0666151)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.50788e-07, 3.39374e-06, 0.0719428)
body_offset = Transform3D(0.99963, 0.0269247, 0.00395133, 5.1409e-07, 0.145177, -0.989406, -0.0272131, 0.989039, 0.145123, -0.000284612, 0.0711802, -0.0104439)

[node name="Physical Bone Head" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="4"]
transform = Transform3D(-0.941955, 0.127343, 0.310651, -0.235863, 0.407491, -0.882224, -0.238933, -0.904287, -0.353803, -0.119463, 1.49508, 0.158104)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.91861e-07, 2.91131e-06, 0.128854)
body_offset = Transform3D(-1, -1.78814e-07, -2.11596e-06, 2.12342e-06, 0.0950896, -0.995469, 3.57628e-07, -0.995469, -0.0950896, -1.19209e-07, 0.12827, 0.0122556)

[node name="Physical Bone LeftShoulder" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="5"]
transform = Transform3D(-0.53957, -0.0633635, -0.839553, -0.582585, 0.747992, 0.317967, 0.607831, 0.660676, -0.440509, 0.0663283, 1.3283, 0.129638)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.20016e-06, 4.04194e-07, 0.0722448)
body_offset = Transform3D(0.999827, -0.0181644, -0.0040997, 8.04663e-07, 0.220209, -0.975453, 0.0186214, 0.975284, 0.220171, 0.00029099, 0.0704713, -0.0159067)

[node name="Physical Bone LeftUpperArm" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="6"]
transform = Transform3D(0.734295, -0.678623, 0.0167787, -0.47344, -0.494253, 0.729088, -0.486483, -0.543309, -0.684214, 0.125033, 1.22089, 0.240704)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.40106e-06, -2.76617e-06, 0.115813)
body_offset = Transform3D(1, 4.39584e-05, 0.000100106, 9.9957e-05, -4.75049e-05, -1, -4.39286e-05, 1, -4.76539e-05, -1.01924e-05, 0.115813, 8.28505e-06)

[node name="Physical Bone LeftLowerArm" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="7"]
transform = Transform3D(0.117359, 0.656407, 0.745223, 0.984549, 0.0213014, -0.173811, -0.129965, 0.754106, -0.643765, 0.0334222, 1.15738, 0.397411)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.06985e-06, -1.85901e-06, 0.120359)
body_offset = Transform3D(1, -8.41916e-07, 2.45869e-07, 5.96046e-08, 4.85778e-06, -1, 9.31323e-07, 1, 4.79817e-06, -3.09944e-06, 0.120359, 1.2815e-06)

[node name="Physical Bone LeftHand" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="8"]
transform = Transform3D(0.237805, -0.867258, 0.437393, -0.853485, -0.401545, -0.332151, 0.463693, -0.294321, -0.835682, -0.0668532, 1.18634, 0.495109)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.35045e-06, 2.26637e-06, 0.0241936)
body_offset = Transform3D(-0.787244, 0.531932, 0.311922, -5.21541e-06, 0.505834, -0.862631, -0.616641, -0.679103, -0.398212, -0.0075435, 0.020869, 0.00963902)

[node name="Physical Bone RightShoulder" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="9"]
transform = Transform3D(0.147417, -0.498684, 0.854156, 0.570224, 0.748475, 0.33857, -0.808154, 0.43715, 0.394699, -0.183997, 1.29701, 0.0401702)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22207e-06, -3.79048e-07, 0.0722444)
body_offset = Transform3D(0.999827, 0.0181745, 0.00409436, -7.95722e-06, 0.220192, -0.975457, -0.01863, 0.975287, 0.220154, -0.000294566, 0.0704714, -0.0159045)

[node name="Physical Bone RightUpperArm" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="10"]
transform = Transform3D(0.370752, 0.876106, 0.30819, -0.20587, -0.246057, 0.94714, 0.905627, -0.414601, 0.0891378, -0.281401, 1.16283, 0.0013597)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.89468e-05, 5.68379e-06, 0.115844)
body_offset = Transform3D(1, 9.83477e-07, -9.53674e-07, -8.49366e-07, -2.42144e-06, -1, -8.64267e-07, 1, -2.24262e-06, 2.90573e-05, 0.115844, -5.42402e-06)

[node name="Physical Bone RightLowerArm" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="11"]
transform = Transform3D(-0.92158, -0.239594, -0.305427, -0.106915, 0.91303, -0.393631, 0.373175, -0.330107, -0.867046, -0.280325, 1.10057, 0.0953713)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.79324e-06, -1.32416e-06, 0.12036)
body_offset = Transform3D(1, -1.33887e-05, -5.00679e-06, -5.1856e-06, 5.96046e-06, -1, 1.35079e-05, 1, 6.04987e-06, 4.39584e-06, 0.12036, 5.96046e-07)

[node name="Physical Bone RightHand" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="12"]
transform = Transform3D(0.729652, -0.562556, -0.388765, -0.659651, -0.429239, -0.61694, 0.18019, 0.706601, -0.684286, -0.234223, 1.16285, 0.216249)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.07165e-05, -2.67895e-05, 0.0241318)
body_offset = Transform3D(-0.787314, -0.531838, -0.311905, -5.96046e-07, 0.505887, -0.8626, 0.616552, -0.679137, -0.398292, 0.00754464, 0.0208296, 0.00956821)

[node name="Physical Bone RightUpperLeg" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="13"]
transform = Transform3D(0.848274, 0.395474, 0.352181, 0.127335, -0.797863, 0.589237, 0.51402, -0.45499, -0.727164, -0.158763, 0.732627, 0.0965892)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53761e-07, 1.8389e-05, 0.216832)
body_offset = Transform3D(-1, 3.50177e-06, 7.15256e-07, -6.25849e-07, 0.0300141, -0.99955, -3.54648e-06, -0.99955, -0.0300141, 3.98606e-07, 0.216734, 0.00652641)

[node name="Physical Bone RightLowerLeg" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="14"]
transform = Transform3D(-0.848116, -0.485191, -0.212811, -0.137528, -0.186293, 0.972821, -0.511649, 0.854333, 0.0912705, -0.187774, 0.388432, 0.233933)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.53648e-06, 1.74902e-06, 0.222471)
body_offset = Transform3D(-1, 2.38419e-07, 5.32717e-07, -4.56348e-07, 0.0937704, -0.995594, -2.98023e-07, -0.995594, -0.0937701, -5.65499e-06, 0.221491, 0.0208629)

[node name="Physical Bone RightFoot" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="15"]
transform = Transform3D(-0.803156, -0.290039, 0.520401, -0.0411716, 0.898428, 0.437187, -0.594344, 0.329703, -0.733519, -0.192471, 0.128367, 0.286962)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.38888e-05, -5.2236e-05, 0.0999545)
body_offset = Transform3D(0.981242, -0.142516, -0.129815, 4.55976e-06, 0.673413, -0.739266, 0.192777, 0.725399, 0.660782, 0.0129818, 0.0739281, -0.0660076)

[node name="Physical Bone LeftUpperLeg" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="16"]
transform = Transform3D(0.961268, 0.27069, 0.0518702, 0.0295003, -0.288167, 0.957126, 0.274032, -0.918524, -0.284991, 0.0712436, 0.641651, 0.105312)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.017e-06, -5.1558e-06, 0.216788)
body_offset = Transform3D(-1, -3.42727e-06, -2.38419e-07, 1.2666e-07, 0.0300123, -0.99955, 3.33786e-06, -0.99955, -0.0300123, -2.96533e-06, 0.21669, 0.00650114)

[node name="Physical Bone LeftLowerLeg" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="17"]
transform = Transform3D(-0.959597, -0.280499, 0.0222158, 0.221331, -0.70371, 0.675133, -0.17374, 0.652773, 0.737361, 0.0550422, 0.28387, 0.00305907)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.39044e-06, -2.80328e-06, 0.222501)
body_offset = Transform3D(-1, 3.09944e-06, 4.54485e-06, -4.17233e-06, 0.0937676, -0.995594, -3.59863e-06, -0.995594, -0.0937676, -5.40167e-06, 0.221521, 0.0208606)

[node name="Physical Bone LeftFoot" parent="master/Armature/GeneralSkeleton/PhysicalBoneSimulator3D" index="18"]
transform = Transform3D(-0.930035, -0.36478, 0.0443811, -0.249523, 0.715562, 0.652464, -0.269763, 0.595741, -0.756519, 0.0456703, 0.0684559, -0.0852995)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.14087e-06, -1.07288e-06, 0.0999997)
body_offset = Transform3D(0.981228, 0.142569, 0.129869, 1.57952e-06, 0.673406, -0.739273, -0.192852, 0.725396, 0.660764, -0.0129878, 0.0739278, -0.0660752)

[node name="AnimationPlayer" parent="master" index="1"]
playback_default_blend_time = 0.3

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("10_kusnb")

[node name="CameraInput" parent="." instance=ExtResource("4_g37aj")]

[node name="RollbackSynchronizer" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("2_ktqdq")
root = NodePath("..")
enable_prediction = true
state_properties = Array[String]([":velocity", ":transform", "master:transform", "RewindableStateMachine:state"])
input_properties = Array[String](["PlayerInput:input_dir", "PlayerInput:jump_input", "PlayerInput:run_input", "CameraInput:camera_basis", "CameraInput:camera_look", "PlayerInput:shoot_input", "PlayerInput:aim_input", "PlayerInput:main_menu_input", "PlayerInput:crouch_input"])
enable_input_broadcast = false
metadata/_custom_type_script = "uid://d350u8evihs1u"

[node name="RewindableStateMachine" type="Node" parent="."]
script = ExtResource("3_lo6j0")
metadata/_custom_type_script = "uid://byrgwv2o7hstx"

[node name="Idle" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("5_4l86x")
animation_name = "idle aiming"
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="Jump" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("6_a47yd")
animation_name = "jump up"
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="Move" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("8_a47yd")
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="Fall" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("8_4l86x")
animation_name = "jump loop"
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")

[node name="Ragdoll" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("10_gjnd3")
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")
metadata/_custom_type_script = "uid://c1xw0v7hky5kl"

[node name="Dead" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("13_2hvjq")
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")
metadata/_custom_type_script = "uid://c1xw0v7hky5kl"

[node name="Static" type="Node" parent="RewindableStateMachine" node_paths=PackedStringArray("camera_input", "player_input", "parent")]
script = ExtResource("13_h5dd4")
animation_name = "idle aiming"
camera_input = NodePath("../../CameraInput")
player_input = NodePath("../../PlayerInput")
parent = NodePath("../..")
metadata/_custom_type_script = "uid://usyufdtn83hc"

[node name="TickInterpolator" type="Node" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_a47yd")
root = NodePath("..")
properties = Array[String]([":velocity", ":transform", "master:transform"])
metadata/_custom_type_script = "uid://dour8fehaaugp"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nrabn")

[node name="HealthSystem" parent="." instance=ExtResource("11_2hvjq")]
regen_enabled = true

[node name="HeatSystem" parent="." instance=ExtResource("15_h5dd4")]

[node name="PlayerUi" parent="." node_paths=PackedStringArray("weapons_manager") instance=ExtResource("12_ua4at")]
weapons_manager = NodePath("../RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager")

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.769434, 0)
shape = SubResource("CapsuleShape3D_y8poy")

[node name="HeadCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65716, 0)
shape = SubResource("CapsuleShape3D_2hvjq")

[node name="RightHandBoneAttachment" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.414228, -0.536119, 0.735521, 0.910115, 0.253095, -0.328075, -0.0102694, 0.805307, 0.592769, -0.309768, 1.4609, 0.122159)
bone_name = "RightHand"
bone_idx = 35
use_external_skeleton = true
external_skeleton = NodePath("../master/Armature/GeneralSkeleton")

[node name="WeaponPivot" type="Marker3D" parent="RightHandBoneAttachment"]

[node name="WeaponPivotFinal" type="Marker3D" parent="RightHandBoneAttachment/WeaponPivot"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 0.999999, 0, -1, 0, -4.37114e-08, 0.35, -0.13, 0.575)

[node name="WeaponsManager" parent="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal" node_paths=PackedStringArray("player_hud", "player") instance=ExtResource("13_nrabn")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.410812, -0.213233, 0.115377)
player_hud = NodePath("../../../../PlayerUi")
player = NodePath("../../../..")

[node name="blasterL" parent="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager/Weapons_Models" index="0"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0.117, 1.16, -0.512)

[node name="blasterN" parent="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager/Weapons_Models" index="1"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0.193, 1.255, -0.643)

[node name="blasterI" parent="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager/HIDDEN_WEAPONS_MODELS" index="0"]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, -0.148, 1.379, -0.398)

[node name="blasterP2" parent="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager/HIDDEN_WEAPONS_MODELS" index="2"]
transform = Transform3D(-0.97237, -0.233408, -0.00407487, 0, 0.0174555, -0.999848, 0.233443, -0.972222, -0.0169732, 0.32, 1.014, -0.35)

[node name="blasterQ2" parent="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager/HIDDEN_WEAPONS_MODELS" index="3"]
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0, 0, 0)

[node name="RootMotionView" type="RootMotionView" parent="."]
animation_path = NodePath("../master/AnimationPlayer")

[editable path="master"]
[editable path="RightHandBoneAttachment/WeaponPivot/WeaponPivotFinal/WeaponsManager"]
